fixed bug where gifs would stretch to fill vertical space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
 #content {
 	display: flex;
 	flex-direction: row-reverse;
-	min-height: 100vh;
+	/*min-height: 100vh;*/
 }
 
 header {
@@ -19,9 +19,9 @@ header {
 }
 
 #gifs {
-	display: flex;
+	/*display: flex;
 	flex-direction: row;
-	flex-wrap: wrap;
+	flex-wrap: wrap;*/
 	width: 75%;
 	border-right: 1px solid #232323;
 	padding: 2px;
@@ -33,6 +33,7 @@ header {
 	background-color: white;
 	overflow: auto;
 	min-width: 300px;
+	min-height: 100vh;
 }
 
 form {
@@ -61,6 +62,7 @@ form input[type=text] {
 }
 
 .gif-holder {
+	display: inline-block;
 	margin: 5px;
 	padding: 5px;
 	box-shadow: 4px 4px 11px 0px rgba(170,170,170,1);
